<resources>
    <string name="app_name">Alumno de TTA</string>
    <string name="passwordHintText">Introduce password</string>
    <string name="password">Contraseña</string>
    <string name="insertID">Introduce DNI</string>
    <string name="name">Nombre</string>
    <string name="access">Acceder</string>
    <string name="loginError">Usuario y/o contraseña erroneos</string>
    <string name="lesson1">Lección 1: Introducción</string>
    <string name="newTest">Nuevo test</string>
    <string name="newExercise">Nuevo ejercicio</string>
    <string name="tracking">Seguimiento</string>
    <string name="menuActivityLabel">Evaluación de TTA</string>
    <string name="newTestActivityLabel">Nuevo Test</string>
    <string name="send">Enviar</string>
    <string name="success">¡Correcto!</string>
    <string name="failure">¡Has fallado!</string>
    <string name="getHelp">Ver ayuda</string>
    <string name="uploadFile">Subir fichero</string>
    <string name="takePhoto">Sacar foto</string>
    <string name="recordAudio">Grabar audio</string>
    <string name="recordVideo">Grabar vídeo</string>
    <string name="uploadSuccess">Se ha realizado la subida satisfactoriamente</string>
    <string name="uploadFail">No se ha podido subir el fichero</string>
    <string name="takePhotoSuccess">La foto se ha enviado correctamente</string>
    <string name="takePhotoFail">Ha habido un problema al enviar la foto</string>
    <string name="recordAudioSuccess">El audio se ha enviado satisfactoriamente</string>
    <string name="recordAudioFail">No se ha podido enviar el audio</string>
    <string name="recordVideoSuccess">Se ha enviado el vídeo satisfactoriamente</string>
    <string name="recordVideoFail">No se ha podido enviar el vídeo</string>
    <string name="no_app">No hay aplicación para realizar esta acción</string>
    <string name="noCamera">Tu dispositivo no tiene camara</string>
    <string name="noMicrophone">No está disponible el micrófono</string>
    <string name="baseURL">http://u017633.ehu.eus:28080/ServidorTta/rest/tta</string>
    <string name="loadingExercise">Cargando ejercicio ...</string>
</resources>
